--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -52,7 +52,7 @@
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/dave/621f9cb7-60f7-4745-a980-3497869d9a55'>Dave, Inc. - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dave/621f9cb7-60f7-4745-a980-3497869d9a55'>Dave, Inc. - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Los Angeles California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -64,7 +64,7 @@
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/riskiq/jobs/1788546'>Job Application for Site Reliability Engineer  at RiskIQ</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/riskiq/jobs/1788546'>Job Application for Site Reliability Engineer  at RiskIQ</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -117,7 +117,7 @@ preferred); Experience with automating systems and infrastructure via Ansible,?.
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tanda/5a227175-4991-4f59-ad13-ec9f68fe8f79'>Tanda - Senior Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/tanda/5a227175-4991-4f59-ad13-ec9f68fe8f79'>Tanda - Senior Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -173,7 +173,7 @@ PagerDuty runs. You partner with Engineering stakeholders to design and deliver
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/punchh/jobs/4348113002'>Job Application for Site Reliability Engineer at Punchh</a></h5> 
+<h5><a href='https://boards.greenhouse.io/punchh/jobs/4348113002'>Job Application for Site Reliability Engineer at Punchh</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -185,11 +185,11 @@ PagerDuty runs. You partner with Engineering stakeholders to design and deliver
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fireflyon/8fee4307-7fb8-4dac-8bdd-4c6f07d5e1bb'>Firefly - Senior Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/fireflyon/8fee4307-7fb8-4dac-8bdd-4c6f07d5e1bb'>Firefly - Senior Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/creditkarma/dae9e9d8-fcae-4d6a-919d-8a36d94ee34f'>Credit Karma - Staff Site Reliability, Observability /  Staff Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/creditkarma/dae9e9d8-fcae-4d6a-919d-8a36d94ee34f'>Credit Karma - Staff Site Reliability, Observability /  Staff Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -205,7 +205,7 @@ PagerDuty runs. You partner with Engineering stakeholders to design and deliver
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workable.com/j/99E63C1886'>iziwork - Jobs: Site Reliability Engineer - Apply online</a></h5> 
+<h5><a href='https://workable.com/j/99E63C1886'>iziwork - Jobs: Site Reliability Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>il y a 5?jours ... 4 ? 8 ans d'exp?rience comme BackEnd Developer et/ou DevOps en 
 environnement agile et sur des projets SaaS. Expertise JavaScript et id?alement 
@@ -292,11 +292,11 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=o82u9fwx&__jvst=Tenable+Employee&__jvsd=sT9ITgwo&__jvsc=Twitter&bid=nJOePKwP'>Tenable Careers - Principal Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=o82u9fwx&__jvst=Tenable+Employee&__jvsd=sT9ITgwo&__jvsc=Twitter&bid=nJOePKwP'>Tenable Careers - Principal Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/kf3qrzp541zaskucr3u3t4z7uo'>Site Reliability Engineer | Averity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/kf3qrzp541zaskucr3u3t4z7uo'>Site Reliability Engineer | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -320,7 +320,7 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/quizlet-2/ecc3ad55-5880-45ad-9de2-6b0001339dc0'>Quizlet - Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/quizlet-2/ecc3ad55-5880-45ad-9de2-6b0001339dc0'>Quizlet - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Site Reliability Engineer. San Francisco, CA. Engineering ? SRE. Full-time. Apply 
 for this job. Quizlet's mission is to help students (and their teachers) practice?...</p>
@@ -416,11 +416,11 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999691769566-cloud-site-reliability-engineer-sre-'>4Catalyzer Cloud Site Reliability Engineer (SRE) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999691769566-cloud-site-reliability-engineer-sre-'>4Catalyzer Cloud Site Reliability Engineer (SRE) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SGDigital/743999691802434-site-reliability-engineer'>SG Digital Site Reliability Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SGDigital/743999691802434-site-reliability-engineer'>SG Digital Site Reliability Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
