Leidos Project Manager | SmartRecruiters. Bosch Group Project Manager/????_BEG | SmartRecruiters. McDonald's Australia Information Systems Project Manager - RMHC | SmartRecruiters. Abode Communities Senior Project Manager - Affordable Housing Development | SmartRecruiters. Project Manager  IS - Grady Health System Careers. Project Manager - HBK Engineering, LLC - Career Page. Project Manager - HBK Engineering, LLC - Career Page. Project Manager - HBK Engineering, LLC - Career Page. Job @ kollex (Berlin): Technical Project Manager -... | JOIN. New Relic Careers - Senior PeopleOps Program Manager. Agil3Tech (Agil3 Technology Solutions) Cybersecurity Program Manager | SmartRecruiters. PPRO - IT Project Manager. Datacom - Agile Project Manager. Datacom - Senior Project Manager - Business Platforms. Datacom - Senior Project Manager. Lely Program Manager Startups | SmartRecruiters. Nutanix Careers - Technical Program Manager. Job Application for Sr. Technical Program Manager, Critical Data Flows at Box. IT Clinical Program Manager - Florida Blue Careers. Project Manager (Enterprise Learning and Development) - Florida Blue Careers. BioDigital - Scientific Project Manager. Sr Project Manager - CBRE Careers. Job @ TwinCap (Zürich): IT Project Manager | JOIN. Wirecard Asia - Jobs: Project Manager, Professional Services (Sales) - Apply online. Wirecard Asia - Jobs: Project Manager, Banking Solutions - Apply online. Wirecard Asia - Jobs: Senior Project Manager - Apply online. Wirecard Asia - Jobs: Enterprise Program Manager - Apply online. Wirecard Asia - Jobs: Project Manager - Apply online. Wirecard Asia - Jobs: Project Manager - Apply online. VAM Systems Project Manager | SmartRecruiters. Bey IT Project Manager (Digital eCommerce) | SmartRecruiters. 4Catalyzer Clinical Program Manager, Deep Learning | SmartRecruiters. Broadridge Project Manager - Financial Systems (REF2737D) | SmartRecruiters. Computer Consultants International, Inc. Program Manager/Engagement Manager 2 (PRE

--- a/project-manager.html
+++ b/project-manager.html
@@ -40,8 +40,24 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://gmh.referrals.selectminds.com/jobs/project-manager-is-7077'>Project Manager  IS - Grady Health System Careers</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Leidos1/743999692430063-project-manager'>Leidos Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692429997-project-manager-beg'>Bosch Group Project Manager/????_BEG | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/McDonaldsAustralia/743999692429895-information-systems-project-manager-rmhc'>McDonald's Australia Information Systems Project Manager - RMHC | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/AbodeCommunities/743999692256877-senior-project-manager-affordable-housing-development'>Abode Communities Senior Project Manager - Affordable Housing Development | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='https://gmh.referrals.selectminds.com/jobs/project-manager-is-7077'>Project Manager  IS - Grady Health System Careers</a></h5> 
+<p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='http://hbkengineering.applytojob.com/apply/UJL5yj6d2e/Project-Manager'>Project Manager - HBK Engineering, LLC - Career Page</a></h5> 
@@ -57,7 +73,7 @@
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://kollex.join.com/jobs/264853-technical-project-manager-sales-w-m-d'>Job @ kollex (Berlin): Technical Project Manager -... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/newrelic/job/oZDEafwa'>New Relic Careers - Senior PeopleOps Program Manager</a></h5> 
@@ -92,7 +108,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/boxinc/jobs/1169960'>Job Application for Sr. Technical Program Manager, Critical Data Flows at Box</a></h5> 
+<h5><a href='https://boards.greenhouse.io/boxinc/jobs/1169960'>Job Application for Sr. Technical Program Manager, Critical Data Flows at Box</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -136,7 +152,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wirecard-asia-holding-pte-ltd.workable.com/j/F0FBC64F17'>Wirecard Asia - Jobs: Project Manager - Apply online</a></h5> 
+<h5><a href='https://wirecard-asia-holding-pte-ltd.workable.com/j/F0FBC64F17'>Wirecard Asia - Jobs: Project Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -174,7 +190,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SEIU775BenefitsGroup1/743999692040772-sr-project-manager'>SEIU 775 Benefits Group Sr. Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SEIU775BenefitsGroup1/743999692040772-sr-project-manager'>SEIU 775 Benefits Group Sr. Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle Washington, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -228,7 +244,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply to Program Manager I at PRO Unlimited @ Facebook in Menlo Park, CA.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://brookfieldam.applytojob.com/apply/Dmvbt8BBe5/Project-Manager-6month-Contract'>Project Manager (6-month contract) - Brookfield Asset Management ...</a></h5> 
+<h5><a href='https://brookfieldam.applytojob.com/apply/Dmvbt8BBe5/Project-Manager-6month-Contract'>Project Manager (6-month contract) - Brookfield Asset Management ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Business Summary. Brookfield Asset Management Inc. (?Brookfield?) is a global 
 alternative asset manager with over $365 billion in assets under management.</p>
@@ -262,7 +278,7 @@ alternative asset manager with over $365 billion in assets under management.</p>
 <p>1 day ago ... Senior Quality Test Engineer - Dublin - LexisNexis Risk Solutions. Risk Solutions. 
 Dublin, Ireland. IT/Technical & Product Development. Requisition #:?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/bankerstoolbox/job/oKQDafw7'>Abrigo Careers - Implementation Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/bankerstoolbox/job/oKQDafw7'>Abrigo Careers - Implementation Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -274,7 +290,7 @@ Dublin, Ireland. IT/Technical & Product Development. Requisition #:?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 21, 2019 ... Apply online for the job of Project Manager, Senior at WWC.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/B6063F06BE'>Vision++ - Jobs: Project Manager - Computer Vision - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/B6063F06BE'>Vision++ - Jobs: Project Manager - Computer Vision - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 19, 2019 ... Apply online for the job of Project Manager - Computer Vision at Vision++.</p>
 <hr/>
@@ -291,12 +307,12 @@ Brasil.</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://cbre.referrals.selectminds.com/jobs/program-manager-remote-57776'>Program Manager - Remote - CBRE Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbre.referrals.selectminds.com/jobs/program-manager-remote-57776'>Program Manager - Remote - CBRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Thanks for your interest in the Program Manager - Remote position. Unfortunately 
 this position has been closed but you can search our 2,156 open jobs by?...</p>
 <hr/>
-<h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/technical-project-manager-ii-11656'>Technical Project Manager II - Akamai Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/technical-project-manager-ii-11656'>Technical Project Manager II - Akamai Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Technical Project Managers are a part of the Akamai Professional Services team 
 focusing on a mixture of E-Commerce, Travel, Hospitality and...</p>
@@ -352,7 +368,7 @@ Manager?...</p>
 supervising carpentry and structural work in the remodeling of residential, 
 industrial, and?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/innerworkings/job/ofQxafww'>InnerWorkings Careers - Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/innerworkings/job/ofQxafww'>InnerWorkings Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... The Project Manager will be responsible for managing every aspect of the project
 , from the time designs and engineering are submitted for estimating and?...</p>
@@ -451,26 +467,6 @@ time. loading Fetching your Linkedin profile .</p>
 <h5><a href='https://jobs.smartrecruiters.com/CommunityHealthcareNetwork/743999692391688-program-manager-lgbtq-programs-'>Community Healthcare Network Program Manager (LGBTQ Programs) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://jobs-capstone.icims.com/jobs/9666/project-manager/job'>Project Manager in Virginia Beach, Virginia | Careers at Capstone ...</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>5 days ago ... Capstone Corporation is now hiring a Project Manager in Virginia Beach, Virginia
-. Review all of the job details and apply today!</p>
-<hr/>
-<h5><a href='https://jobs-getty.icims.com/jobs/3447/project-manager-sr/job'>Project Manager Sr in Los Angeles, California | Careers at The Getty</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 18, 2019 ... The Getty is now hiring a Project Manager Sr in Los Angeles, California. Review 
-all of the job details and apply today!</p>
-<hr/>
-<h5><a href='https://careers-grubhub.icims.com/jobs/8510/program-manager/job'>Careers at Grubhub - Program Manager in Chicago, Illinois ...</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 17, 2019 ... 111 W Washington Suite 2100, Chicago, IL 60602 is now hiring a Program 
-Manager in Chicago, Illinois. Review all of the job details and apply today!</p>
-<hr/>
-<h5><a href='https://careers-costain.icims.com/jobs/3246/senior-project-manager/job'>Join Costain | Costain | Senior Project Manager in Solihull | Careers ...</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 15, 2019 ... Birmingham Business Park is now hiring a Senior Project Manager in Solihull. 
-Review all of the job details and apply today!</p>
 <hr/>
 
 
